# SLIM

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/slim/: graph.h  index.h
common/include/slim/spectral/: eigen.h  laplacian.h
common/src/: graph.cpp  index.cpp
common/src/spectral/: eigen.cpp  laplacian.cpp
dataset/: yeast.graph
dataset/queries/: query_10_000.graph  query_10_001.graph  query_10_002.graph  query_10_003.graph  query_10_004.graph  query_10_005.graph  query_10_006.graph  query_10_007.graph  query_10_008.graph  query_10_009.graph  query_10_010.graph  query_10_011.graph  query_10_012.graph  query_10_013.graph  query_10_014.graph  query_10_015.graph  query_10_016.graph  query_10_017.graph  query_10_018.graph  query_10_019.graph  query_10_020.graph  query_10_021.graph  query_10_022.graph  query_10_023.graph  query_10_024.graph  query_12_000.graph  query_12_001.graph  query_12_002.graph  query_12_003.graph  query_12_004.graph  query_12_005.graph  query_12_006.graph  query_12_007.graph  query_12_008.graph  query_12_009.graph  query_12_010.graph  query_12_011.graph  query_12_012.graph  query_12_013.graph  query_12_014.graph  (+110 more)
offline/: CMakeLists.txt
offline/include/slim/offline/: builder.h  encoder.h  hierarchical.h
offline/src/: builder.cpp  encoder.cpp  hierarchical.cpp  main.cpp
online/: CMakeLists.txt
online/include/slim/: filter.h  matcher.h
online/include/slim/enumerate/: candidate_storage.h  enumerator.h  set_intersection.h  unified_edge_matrix.h
online/include/slim/intersection/: avx2.h  standard.h
online/src/: filter.cpp  main.cpp  matcher.cpp
online/src/enumerate/: candidate_storage.cpp  enumerator.cpp  unified_edge_matrix.cpp  unified_enumerator.cpp
